[package]
name = "oxideo-organizer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
kamadak-exif = "0.5.5"
anyhow = "1.0.72"
indicatif = { version = "0.17.6", features = ["rayon"] }
walkdir = "2.3.3"
rayon = "1.7.0"
